--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
   
   #hedlinecontainer {
     top: 10px; /* reduce top spacing on small screens */
-    padding: 0 2px; /* add some side padding */
-    width: 20%;
+    padding: 0 10px; /* add some side padding */
+    width: 400px;
   }
-  
 }
 
 </style>
