--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
   /* Slideshow container */
   #slideshow {
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     position: relative;
     overflow: hidden;
     border: 12px solid #f2f2f2;
@@ -102,7 +102,7 @@
 <body>
 
 <div id="hedlinecontainer">
-  <div id="shine">💞 Happy 8-month Mumu 💞</div>
+  <div id="shine"> Happy 8-month Mumu 💞</div>
 </div>
 
 <div id="slideshow"></div>
