--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>
 
 <div id="hedlinecontainer">
-  <div id="shine">💞 Happy 8-month Mumu 💞</div>
+  <div id="shine">Happy 8-month Mumu 💞</div>
 </div>
 
 <div id="slideshow"></div>
