--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 @media (max-width: 480px) {
   #shine {
-    font-size: 30px; /* smaller on phones */
+    font-size: 25px; /* smaller on phones */
   }
   
   #hedlinecontainer {
@@ -117,7 +117,7 @@
 <body>
 
 <div id="hedlinecontainer">
-  <div id="shine">Happy 8-month Mumu 💞</div>
+  <div id="shine">💞 Happy 8-month Mumu 💞</div>
 </div>
 
 <div id="slideshow"></div>
