--- a/index.html
+++ b/index.html
@@ -1,118 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>8-month Anniversary Slideshow</title>
-<style>
-  body, html {
-    margin: 0; padding: 0;
-    height: 100%;
-    background: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-
-  #hedlinecontainer {
-    position: fixed;
-    top: 20px;
-    width: 100%;
-    text-align: center;
-    z-index: 50;
-    pointer-events: none;
-  }
-
-  #shine {
-    font-size: 60px;
-    font-weight: bold;
-    color: rgba(255, 0, 102, 0.3);
-    background: linear-gradient(90deg, #222 0%, #fff 50%, #222 100%);
-    background-size: 150px;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    animation: shine 10s infinite;
-    text-shadow: 0 0 15px rgba(233, 85, 189, 0.4);
-  }
-
-  @keyframes shine {
-    0%, 10% {
-      background-position: -1000px 0;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>8-month Anniversary Slideshow</title>
+  <style>
+    body, html {
+      margin: 0; padding: 0;
+      height: 100%;
+      background: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding-top: 100px; /* Prevent overlap with header */
     }
-    20% {
-      background-position: 0 0;
+
+    @media (max-width: 768px) {
+      body {
+        padding-top: 70px;
+      }
     }
-    90% {
-      background-position: 1000px 0;
+
+    @media (max-width: 480px) {
+      body {
+        padding-top: 60px;
+      }
     }
-    100% {
-      background-position: 1000px 0;
+
+    #hedlinecontainer {
+      position: fixed;
+      top: 20px;
+      width: 100%;
+      text-align: center;
+      z-index: 50;
+      pointer-events: none;
     }
-  }
 
-  /* Slideshow container */
-  #slideshow {
-    width: 450px;
-    height: 450px;
-    position: relative;
-    overflow: hidden;
-    border: 12px solid #f2f2f2;
-    border-radius: 20px;
-    box-shadow: 0 0 20px #ff0066aa;
-    background: #222;
-    user-select: none;
-  }
+    #shine {
+      font-size: 60px;
+      font-weight: bold;
+      color: rgba(255, 0, 102, 0.3);
+      background: linear-gradient(90deg, #222 0%, #fff 50%, #222 100%);
+      background-size: 150px;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      animation: shine 10s infinite;
+      text-shadow: 0 0 15px rgba(233, 85, 189, 0.4);
+    }
 
-  #slideshow img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0;
-    user-select: none;
-  }
+    @keyframes shine {
+      0%, 10% {
+        background-position: -1000px 0;
+      }
+      20% {
+        background-position: 0 0;
+      }
+      90% {
+        background-position: 1000px 0;
+      }
+      100% {
+        background-position: 1000px 0;
+      }
+    }
 
-  #tapOverlay {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.75);
-    color: #ff0066;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    font-weight: bold;
-    z-index: 60;
-    user-select: none;
-  }
-  #tapOverlay:hover {
-    cursor: pointer;
-    color: #ff3399;
-  }
-  /* Responsive headline for tablets and mobiles */
+    @media (max-width: 768px) {
+      #shine {
+        font-size: 40px;
+      }
+    }
 
-@media (max-width: 768px) {
-  #shine {
-    font-size: 40px; /* smaller on iPads/tablets */
-  }
-}
+    @media (max-width: 480px) {
+      #shine {
+        font-size: 25px;
+      }
 
-@media (max-width: 480px) {
-  #shine {
-    font-size: 25px; /* smaller on phones */
-  }
-  
-  #hedlinecontainer {
-    top: 10px; /* reduce top spacing on small screens */
-    padding: 0 10px; /* add some side padding */
-  }
-}
+      #hedlinecontainer {
+        top: 30px;
+        padding: 0 10px;
+      }
+    }
 
-</style>
+    #slideshow {
+      width: 450px;
+      height: 450px;
+      position: relative;
+      overflow: hidden;
+      border: 12px solid #f2f2f2;
+      border-radius: 20px;
+      box-shadow: 0 0 20px #ff0066aa;
+      background: #222;
+      user-select: none;
+    }
+
+    #slideshow img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      user-select: none;
+    }
+
+    #tapOverlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.75);
+      color: #ff0066;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3rem;
+      font-weight: bold;
+      z-index: 60;
+      user-select: none;
+    }
+
+    #tapOverlay:hover {
+      cursor: pointer;
+      color: #ff3399;
+    }
+  </style>
 </head>
 <body>
 
@@ -133,24 +144,13 @@
   const slideshow = document.getElementById('slideshow');
   const tapOverlay = document.getElementById('tapOverlay');
   const bgMusic = document.getElementById('bgMusic');
-  const transitionDuration = 1000; // 1.5s fade+slide
+  const transitionDuration = 1000;
 
   let currentIndex = 0;
   let images = [];
   let isRunning = false;
+  let isTransitioning = false;
 
-  // Create 2 image elements to toggle between
-  function createImageElements() {
-    for(let i=0; i<2; i++) {
-      const img = document.createElement('img');
-      slideshow.appendChild(img);
-      images.push(img);
-    }
-  }
-
-  // Transition patterns for next and prev
-  // For next: slide in from right, out to left
-  // For prev: slide in from left, out to right
   const transitionNext = {
     enterStart: 'translateX(100%)',
     enterEnd: 'translateX(0)',
@@ -163,64 +163,73 @@
     exitEnd: 'translateX(100%)',
   };
 
+  function createImageElements() {
+    for (let i = 0; i < 2; i++) {
+      const img = document.createElement('img');
+      slideshow.appendChild(img);
+      images.push(img);
+    }
+  }
+
+  function preloadImages() {
+    for (let i = 1; i <= totalImages; i++) {
+      const img = new Image();
+      img.src = `${imageFolder}${i}${imageExtension}`;
+    }
+  }
+
   function showImage(nextIndex, direction) {
-    if(nextIndex === currentIndex) return; // no change
+    if (nextIndex === currentIndex || isTransitioning) return;
+    isTransitioning = true;
 
     const currentImg = images[0];
     const nextImg = images[1];
-    let t;
+    const t = direction === 'prev' ? transitionPrev : transitionNext;
 
-    if(direction === 'next') {
-      t = transitionNext;
-    } else if(direction === 'prev') {
-      t = transitionPrev;
-    } else {
-      t = transitionNext; // fallback
-    }
+    const tempImg = new Image();
+    tempImg.onload = () => {
+      nextImg.src = tempImg.src;
+      nextImg.style.transition = 'none';
+      nextImg.style.opacity = '0';
+      nextImg.style.transform = t.enterStart;
 
-    // Set next image src and initial styles
-    nextImg.src = `${imageFolder}${nextIndex + 1}${imageExtension}`;
-    nextImg.style.transition = 'none';
-    nextImg.style.opacity = '0';
-    nextImg.style.transform = t.enterStart;
+      void nextImg.offsetWidth;
 
-    // Force reflow to apply initial styles
-    void nextImg.offsetWidth;
+      nextImg.style.transition = `transform ${transitionDuration}ms ease, opacity ${transitionDuration}ms ease`;
+      nextImg.style.opacity = '1';
+      nextImg.style.transform = t.enterEnd;
 
-    // Animate next image sliding in + fade in
-    nextImg.style.transition = `transform ${transitionDuration}ms ease, opacity ${transitionDuration}ms ease`;
-    nextImg.style.opacity = '1';
-    nextImg.style.transform = t.enterEnd;
+      currentImg.style.transition = `transform ${transitionDuration}ms ease, opacity ${transitionDuration}ms ease`;
+      currentImg.style.opacity = '0';
+      currentImg.style.transform = t.exitEnd;
 
-    // Animate current image sliding out + fade out
-    currentImg.style.transition = `transform ${transitionDuration}ms ease, opacity ${transitionDuration}ms ease`;
-    currentImg.style.opacity = '0';
-    currentImg.style.transform = t.exitEnd;
+      images.reverse();
+      currentIndex = nextIndex;
 
-    // Swap images so next becomes current
-    images.reverse();
+      setTimeout(() => {
+        isTransitioning = false;
+      }, transitionDuration);
+    };
 
-    currentIndex = nextIndex;
+    tempImg.src = `${imageFolder}${nextIndex + 1}${imageExtension}`;
   }
 
   function startSlideshow() {
-    if(isRunning) return;
+    if (isRunning) return;
     isRunning = true;
     tapOverlay.style.display = 'none';
     bgMusic.play().catch(() => {
       console.log('Autoplay prevented, waiting for user interaction...');
     });
 
-    // Show first image immediately
     images[0].src = `${imageFolder}1${imageExtension}`;
     images[0].style.opacity = '1';
     images[0].style.transform = 'translateX(0)';
     currentIndex = 0;
   }
 
-  // Handle tap/click to go prev/next based on x position
   function handleClick(event) {
-    if(!isRunning) {
+    if (!isRunning) {
       startSlideshow();
       return;
     }
@@ -228,23 +237,19 @@
     const rect = slideshow.getBoundingClientRect();
     const x = event.clientX - rect.left;
 
-    if(x > rect.width / 2) {
-      // Clicked on right half - next image
+    if (x > rect.width / 2) {
       const nextIndex = (currentIndex + 1) % totalImages;
       showImage(nextIndex, 'next');
     } else {
-      // Clicked on left half - previous image
       const prevIndex = (currentIndex - 1 + totalImages) % totalImages;
       showImage(prevIndex, 'prev');
     }
   }
 
   createImageElements();
+  preloadImages(); 
 
-  tapOverlay.addEventListener('click', () => {
-    startSlideshow();
-  });
-
+  tapOverlay.addEventListener('click', startSlideshow);
   slideshow.addEventListener('click', handleClick);
 </script>
 
