--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>8-month Anniversary Slideshow</title>
+  <title>For my little Mumu</title>
   <style>
     body, html {
       margin: 0; padding: 0;
