--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>For my little Mumu</title>
+  <title>For my little Mumu :P</title>
   <style>
     body, html {
       margin: 0; padding: 0;
@@ -19,13 +19,13 @@
 
     @media (max-width: 768px) {
       body {
-        padding-top: 40px;
+        padding-top: 10px;
       }
     }
 
     @media (max-width: 480px) {
       body {
-        padding-top: 30px;
+        padding-top: 5px;
       }
     }
 
